<resources>
    <string name="app_name">Cashix</string>
    <string name="title_goals">My Goals</string>
    <string name="title_budgetPlanner">Budget Planner</string>
    <string name="title_history">Deposit History</string>
    <string name="titleName">Title</string>
    <string name="required">Required*</string>
    <string name="categoriesText">Categories:</string>
    <string name="foodText">Food</string>
    <string name="hobbyText">Hobby</string>
    <string name="travelText">Travel</string>
    <string name="rentText">Rent</string>
    <string name="socialText">Social</string>
    <string name="otherText">Other</string>
    <string name="start_dateText">Start Date*:</string>
    <string name="end_dateText">End Date*:</string>
    <string name="create_budget_plannerButton">CREATE BUDGET PLANNER</string>
    <string name="priceText">Price</string>
    <string name="descriptionText">Description</string>
    <string name="add_goalButton">ADD GOAL</string>
    <string name="start_dateWithoutStarText">Start Date:</string>
    <string name="end_dateWithoutStarText">End Date:</string>
    <string name="progressText">Progress:</string>
    <string name="days_leftText">Days Left:</string>
    <string name="save_per_dayText">Save per Day:</string>
    <string name="save_per_monthText">Save per Month:</string>
    <string name="save_per_weekText">Save per Week:</string>
    <string name="save_per_yearText">Save per Year:</string>
    <string name="in_depositText">In deposit:</string>
    <string name="deposit_leftText">Deposit Left:</string>
    <string name="deposit_moneyText">Deposit Money:</string>
    <string name="plusSignButton" translatable="false">+</string>
    <string name="depositText">Deposit:</string>
    <string name="no_budget_planner_availableText">No Budget Planner available!</string>
    <string name="deleteText">Delete</string>
    <string name="your_avg_dayText">Your Avg: </string>
    <string name="avg_dayText">Avg/Day:</string>
    <string name="spentText">Spent:</string>
    <string name="planText">Plan:</string>
    <string name="create_budget_plannerName">Create new Budget Planner</string>
    <string name="dateErrorMessage">END DATE MUST BE LATER THAN START DATE!</string>
    <string name="categoryErrorMessage">YOU MUST CHOOSE AT LEAST ONE CATEGORY!</string>
    <string name="budgetPlannerSuccessMessage">BUDGET PLANNER SUCCESSFULLY CREATED!</string>
    <string name="maxDepositMessage">"Max you can deposit: "</string>
    <string name="depositSuccessMessage">Successfully deposited money!</string>
    <string name="depositErrorMessage">Fill in Deposit Money field!</string>
    <string name="goalSuccessMessage">Goal successfully created!</string>
    <string name="requiredExcla">Required!</string>
    <string name="nothingToDeleteMessage">Nothing to delete!</string>
    <string name="avgText">"Avg: "</string>
    <string name="dayText">" /Day"</string>
    <string name="createNewGoalText">Create new Goal</string>
    <string name="successFullyCreatedText">Created!</string>
</resources>