<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.budgetPlanner.CreateBudgetPlannerActivity">


        <TextView
            android:id="@+id/createBudgetCategoriesTextView"
            style="@style/TextViewSimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/categoriesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createBudgetTitleLayout" />

        <CheckBox
            android:id="@+id/createBudgetFoodCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/createBudgetRentCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout3"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2" />

        <CheckBox
            android:id="@+id/createBudgetFriendsCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout4" />

        <CheckBox
            android:id="@+id/createBudgetHobbyCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/createBudgetTravelCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/createBudgetOtherCheck"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayout7"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout6" />

        <TextView
            android:id="@+id/createBudgetStartDateTextView"
            style="@style/TextViewSimple"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:text="@string/start_dateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <TextView
            android:id="@+id/createBudgetEndDateTextView"
            style="@style/TextViewSimple"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/end_dateText"
            app:layout_constraintEnd_toStartOf="@+id/createBudgetStartDate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createBudgetStartDateTextView" />

        <CalendarView
            android:id="@+id/createBudgetStartDate"
            style="@style/CalendarView"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

        <CalendarView
            android:id="@+id/createBudgetEndDate"
            style="@style/CalendarView"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createBudgetPlanner"
            android:text="@string/create_budget_plannerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createBudgetErrorMessage" />

        <TextView
            android:id="@+id/createBudgetErrorMessage"
            style="@style/warningTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createBudgetStartDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createBudgetTitleLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/titleName"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/foodText"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/createBudgetRentCheck"
            app:layout_constraintStart_toEndOf="@+id/createBudgetFoodCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/rentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/createBudgetRentCheck"
            app:layout_constraintTop_toBottomOf="@+id/createBudgetCategoriesTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetRent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/hobbyText"
            app:layout_constraintBaseline_toBaselineOf="@+id/createBudgetFriendsCheck"
            app:layout_constraintStart_toEndOf="@+id/createBudgetHobbyCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetHobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/socialText"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/createBudgetFriendsCheck"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/travelText"
            app:layout_constraintBaseline_toBaselineOf="@+id/createBudgetOtherCheck"
            app:layout_constraintStart_toEndOf="@+id/createBudgetTravelCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetTravel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/otherText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/createBudgetOtherCheck"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createBudgetOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

